Fix: z-index

--- a/src/app/smn-ui/select/select.component.scss
+++ b/src/app/smn-ui/select/select.component.scss
@@ -30,6 +30,7 @@
     position: absolute;
     user-select: none;
     cursor: default;
+    z-index: 5;
 
     &.open {
         max-height: 216px;
